OO-4161: additional option to relax access if results are visible