@@ -36,7 +36,7 @@ import org.olat.core.util.StringHelper;
  * @author Mike Stock Comment:
  */
 public class Condition implements Serializable, Cloneable {
-	transient private String conditionId = null;
+	private transient String conditionId = null;
 	private String condition = null;
 	private boolean expertMode = false;
 
@@ -60,6 +60,8 @@ public class Condition implements Serializable, Cloneable {
 	
 	// true: only in assessment mode
 	private boolean assessmentMode;
+	private boolean assessmentModeViewResults;
+	private String easyModeAssessmentModeNodeId;
 
 	// This is the MapList in which the extended easy mode conditions are stored
 	private List<ExtendedCondition> attributeConditions = null;
@@ -233,7 +235,7 @@ public class Condition implements Serializable, Cloneable {
 			String[] longStrArr = ids.split(",");
 			List<Long> keys = new ArrayList<>(longStrArr.length);
 			for(String longStr:longStrArr) {
-				keys.add(new Long(longStr.trim()));
+				keys.add(Long.valueOf(longStr.trim()));
 			}
 			return keys;
 		}
@@ -260,6 +262,22 @@ public class Condition implements Serializable, Cloneable {
 
 	public void setAssessmentMode(boolean assessmentMode) {
 		this.assessmentMode = assessmentMode;
+	}
+
+	public boolean isAssessmentModeViewResults() {
+		return assessmentModeViewResults;
+	}
+
+	public void setAssessmentModeViewResults(boolean viewResults) {
+		this.assessmentModeViewResults = viewResults;
+	}
+
+	public String getEasyModeAssessmentModeNodeId() {
+		return easyModeAssessmentModeNodeId;
+	}
+
+	public void setEasyModeAssessmentModeNodeId(String nodeId) {
+		this.easyModeAssessmentModeNodeId = nodeId;
 	}
 
 	/**
@@ -311,7 +329,7 @@ public class Condition implements Serializable, Cloneable {
 	 */
 	public String getConditionFromEasyModeConfiguration() {
 		boolean needsAmpersand = false;
-		StringBuilder sb = new StringBuilder();
+		StringBuilder sb = new StringBuilder(512);
 
 		sb.append("( "); // BEGIN all enclosing bracket
 
@@ -391,7 +409,12 @@ public class Condition implements Serializable, Cloneable {
 		}
 		if(isAssessmentMode()) {
 			if (needsAmpersand) sb.append(" & ");
-			sb.append(" isAssessmentMode(0)");
+			
+			if(isAssessmentModeViewResults()) {
+				sb.append(" isAssessmentMode(\"").append(getEasyModeAssessmentModeNodeId()).append("\",true)");
+			} else {
+				sb.append(" isAssessmentMode(0)");
+			}
 			needsAmpersand = true;
 		}
 		if (isEasyModeCoachesAndAdmins()) {
